--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
         <h1>Hello World</h1>
         <h1>Hello World</h1>
         <span> Hello</span>
-
+<div>
+    <h2>Local host</h2>
+    <h2>Local host</h2>
+    <h2>Local host</h2>
+</div>Local host
+<div>Local host
+    <h2>Local host</h2>
+    <h2>Local host</h2>
+    <h2>Local host</h2>
+</div>
 
         </body>
 </html>
